fix(style): reduce underline offset to avoid underline overflow

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,7 +5,7 @@ html {
 }
 
 * {
-  text-underline-offset: 0.3em;
+  text-underline-offset: 0.25em;
 }
 
 .flex > [class*="i-mdi-"] {
